stderr
JudgeMan.java:12: error: cannot find symbol
        String ans = pairJudge(hand);
                     ^
  symbol:   method pairJudge(String[])
  location: class JudgeMan
1 error
